--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
 
-<body class="w-full max-w-[1600px] mx-auto bg-white text-[#24272A]">
+<body class="w-full bg-white text-[#24272A]">
 
     <!-- СЕКЦИИ, КОТОРЫЕ ВСТАВЛЯЕТ include.js -->
     <div data-include="tpl/header.html"></div>
