--- a/tpl/footer.html
+++ b/tpl/footer.html
@@ -1,4 +1,4 @@
-<footer class="w-full bg-white border-t border-[#DCDEE0]" x-data="{ open: null }">
+<footer class="w-full bg-white border-t border-[#DCDEE0]">
 
   <!-- ================= DESKTOP ================= -->
   <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px] pt-[72px] pb-[56px]">
@@ -9,23 +9,25 @@
         <div>
           <div class="font-semibold mb-3">Корпуса</div>
           <ul class="space-y-2">
-            <li>Главный корпус</li>
-            <li>Ризница Троице-Сергиевской Лавры</li>
-            <li>Музейный комплекс «Конный двор»</li>
-            <li>Краеведческий корпус</li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Главный корпус</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Ризница Троице-Сергиевской Лавры</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Музейный комплекс «Конный двор»</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Краеведческий корпус</a></li>
           </ul>
         </div>
 
-        <div class="font-semibold">Интерактивная карта</div>
+        <a class="font-semibold hover:text-[#C93635] transition cursor-pointer inline-block" href="#">
+          Интерактивная карта
+        </a>
 
         <div>
           <div class="font-semibold mb-3">Для групп</div>
           <ul class="space-y-2">
-            <li>Турфирмам</li>
-            <li>Группам учащихся</li>
-            <li>Социальным группам и людям с инвалидностью</li>
-            <li>Паломникам</li>
-            <li>Билеты и услуги для групп</li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Турфирмам</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Группам учащихся</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Социальным группам и людям с инвалидностью</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Паломникам</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Билеты и услуги для групп</a></li>
           </ul>
         </div>
       </div>
@@ -34,173 +36,125 @@
       <div>
         <div class="font-semibold mb-3">Посетителям</div>
         <ul class="space-y-2">
-          <li>Часто задаваемые вопросы</li>
-          <li>Билеты</li>
-          <li>Пушкинская карта</li>
-          <li>Рекомендованные маршруты</li>
-          <li>Музей детям</li>
-          <li>Мастер-классы</li>
-          <li>Концерты</li>
-          <li>Посетителям с ОВЗ</li>
-          <li>Правила посещения и возврата денег</li>
-          <li>Спланировать визит</li>
-          <li>Услуги</li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Часто задаваемые вопросы</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Билеты</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Пушкинская карта</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Рекомендованные маршруты</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Музей детям</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Мастер-классы</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Концерты</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Посетителям с ОВЗ</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Правила посещения и возврата денег</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Спланировать визит</a></li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Услуги</a></li>
         </ul>
+
+        <div class="mt-10">
+          <div class="font-semibold mb-3">Мероприятия</div>
+          <ul class="space-y-2">
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Афиша</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Выходные в Сергиевом Посаде</a></li>
+          </ul>
+        </div>
       </div>
 
       <!-- COL 3 -->
       <div>
-        <div class="font-semibold mb-3">О музее</div>
+        <div class="font-semibold mb-3">Экскурсии</div>
         <ul class="space-y-2">
-          <li>Научная деятельность</li>
-          <li>Документы</li>
-          <li>История музея</li>
-          <li>Коллекции</li>
-          <li>Заказ изображений</li>
-          <li>Вакансии</li>
+          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Экскурсии</a></li>
         </ul>
+
+        <div class="mt-10">
+          <div class="font-semibold mb-3">О музее</div>
+          <ul class="space-y-2">
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Научная деятельность</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Документы</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">История музея</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Коллекции</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Заказ изображений</a></li>
+            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Вакансии</a></li>
+          </ul>
+        </div>
+
+        <div class="mt-10">
+          <div class="font-semibold">Контакты</div>
+        </div>
       </div>
 
       <!-- COL 4 -->
       <div class="space-y-6">
-        <button class="w-full border border-[#24272A] py-3 font-semibold hover:bg-[#24272A] hover:text-white transition">
+        <button class="w-full border border-[#24272A] py-3 font-semibold hover:bg-[#24272A] hover:text-white transition cursor-pointer" type="button">
           Обратный звонок
         </button>
 
-        <div class="font-semibold">sergiev-mus@mail.ru</div>
+        <a class="font-semibold hover:text-[#C93635] transition cursor-pointer inline-block" href="mailto:sergiev-mus@mail.ru">
+          sergiev-mus@mail.ru
+        </a>
 
         <div class="space-y-3">
           <div>
             <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
-            <div>8 496 540-53-56</div>
-            <div>8 985 040-45-17</div>
+            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+74965405356">8 496 540-53-56</a>
+            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+79850404517">8 985 040-45-17</a>
           </div>
           <div>
             <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
-            <div>8 496 540-63-58</div>
+            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+74965406358">8 496 540-63-58</a>
           </div>
         </div>
 
+        <!-- SOCIAL -->
         <div class="flex gap-4 pt-2">
-          <include src="/assets/svg/telegram.svg"></include>
-          <include src="/assets/svg/vk.svg"></include>
-          <include src="/assets/svg/youtube.svg"></include>
-          <include src="/assets/svg/ok.svg"></include>
+          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="Telegram">
+            <img src="/assets/svg/telegram.svg" class="w-5 h-5" alt="">
+          </a>
+          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="VK">
+            <img src="/assets/svg/vk.svg" class="w-5 h-5" alt="">
+          </a>
+          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="YouTube">
+            <img src="/assets/svg/youtube.png" class="w-5 h-5" alt="">
+          </a>
+          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="OK">
+            <img src="/assets/svg/ok.svg" class="w-5 h-5" alt="">
+          </a>
         </div>
       </div>
 
     </div>
   </div>
 
-  <!-- ================= MOBILE ================= -->
-<div class="lg:hidden px-4 pt-10 pb-8 text-sm text-[#24272A]" x-data="{ open: null }">
+  <!-- ================= BOTTOM (STRICT BY MOCKUP) ================= -->
+  <div class="w-full border-t border-[#DCDEE0]">
+    <div class="max-w-[1600px] mx-auto px-4 lg:px-[60px] py-6
+                flex items-end justify-between gap-10
+                text-[16px] leading-[160%]">
 
-  <!-- Корпуса -->
-  <div class="border-b border-[#DCDEE0]">
-    <button
-      @click="open === 1 ? open = null : open = 1"
-      class="w-full flex justify-between items-center py-4 font-semibold"
-    >
-      <span>Корпуса</span>
-      <span :class="open === 1 ? 'rotate-45' : ''" class="transition">+</span>
-    </button>
+      <!-- LEFT: 3 LINES -->
+      <div class="space-y-3 text-[#24272A]">
+        <div>
+          141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
+        </div>
 
-    <div x-show="open === 1" x-collapse class="pb-4 space-y-2">
-      <div>Главный корпус</div>
-      <div>Ризница Троице-Сергиевской Лавры</div>
-      <div>Музейный комплекс «Конный двор»</div>
-      <div>Краеведческий корпус</div>
+        <div>
+          © 2025 ФГБУК «Сергиево-Посадский государственный историко-художественный музей-заповедник»
+        </div>
+
+        <div class="text-[#6B7280] flex items-center gap-8">
+          <span>Использование материалов сайта без разрешения правообладателя — запрещено</span>
+          <a href="#" class="hover:text-[#24272A] transition cursor-pointer">
+            Политика конфиденциальности
+          </a>
+        </div>
+      </div>
+
+      <!-- RIGHT: "Создано в" + icon -->
+      <div class="flex items-center gap-2 text-[#24272A] whitespace-nowrap">
+        <span class="font-semibold">Создано в</span>
+        <img src="/assets/svg/web1.svg" class="h-4 w-auto" alt="Web studio">
+      </div>
+
     </div>
   </div>
 
-  <!-- Для групп -->
-  <div class="border-b border-[#DCDEE0]">
-    <button
-      @click="open === 2 ? open = null : open = 2"
-      class="w-full flex justify-between items-center py-4 font-semibold"
-    >
-      <span>Для групп</span>
-      <span :class="open === 2 ? 'rotate-45' : ''" class="transition">+</span>
-    </button>
-
-    <div x-show="open === 2" x-collapse class="pb-4 space-y-2">
-      <div>Турфирмам</div>
-      <div>Группам учащихся</div>
-      <div>Социальным группам и людям с инвалидностью</div>
-      <div>Паломникам</div>
-      <div>Билеты и услуги для групп</div>
-    </div>
-  </div>
-
-  <!-- Посетителям -->
-  <div class="border-b border-[#DCDEE0]">
-    <button
-      @click="open === 3 ? open = null : open = 3"
-      class="w-full flex justify-between items-center py-4 font-semibold"
-    >
-      <span>Посетителям</span>
-      <span :class="open === 3 ? 'rotate-45' : ''" class="transition">+</span>
-    </button>
-
-    <div x-show="open === 3" x-collapse class="pb-4 space-y-2">
-      <div>Часто задаваемые вопросы</div>
-      <div>Билеты</div>
-      <div>Пушкинская карта</div>
-      <div>Рекомендованные маршруты</div>
-      <div>Музей детям</div>
-      <div>Мастер-классы</div>
-      <div>Концерты</div>
-      <div>Посетителям с ОВЗ</div>
-      <div>Правила посещения и возврата денег</div>
-      <div>Спланировать визит</div>
-      <div>Услуги</div>
-    </div>
-  </div>
-
-  <!-- О музее -->
-  <div class="border-b border-[#DCDEE0]">
-    <button
-      @click="open === 4 ? open = null : open = 4"
-      class="w-full flex justify-between items-center py-4 font-semibold"
-    >
-      <span>О музее</span>
-      <span :class="open === 4 ? 'rotate-45' : ''" class="transition">+</span>
-    </button>
-
-    <div x-show="open === 4" x-collapse class="pb-4 space-y-2">
-      <div>Научная деятельность</div>
-      <div>Документы</div>
-      <div>История музея</div>
-      <div>Коллекции</div>
-      <div>Заказ изображений</div>
-      <div>Вакансии</div>
-    </div>
-  </div>
-
-  <!-- Контакты -->
-  <div class="mt-8 space-y-4">
-    <button class="w-full border border-[#24272A] py-3 font-semibold">
-      Обратный звонок
-    </button>
-
-    <div class="font-semibold">sergiev-mus@mail.ru</div>
-
-    <div>
-      <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
-      <div>8 496 540-53-56</div>
-      <div>8 985 040-45-17</div>
-    </div>
-
-    <div>
-      <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
-      <div>8 496 540-63-58</div>
-    </div>
-
-    <div class="flex gap-4 pt-4">
-      <include src="/assets/svg/telegram.svg"></include>
-      <include src="/assets/svg/vk.svg"></include>
-      <include src="/assets/svg/youtube.svg"></include>
-      <include src="/assets/svg/ok.svg"></include>
-    </div>
-  </div>
-</div>
+</footer>
