--- a/tpl/menu.html
+++ b/tpl/menu.html
@@ -1,117 +1,91 @@
-<nav
-    x-data="{
-        mobileOpen: false,
-        open: null
-    }"
-    class="w-full bg-white border-b border-[#DCDEE0]"
->
+<nav class="w-full bg-white border-b border-[#DCDEE0]">
 
     <!-- DESKTOP MENU -->
     <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px]">
-        <ul class="flex items-center gap-10 h-[64px] text-base font-medium">
+        <ul class="flex items-center justify-between w-full h-[64px]
+                   text-[16px] font-normal leading-[1.6]
+                   text-[#24272A]">
 
             <!-- Корпуса -->
-            <li class="relative h-full flex items-center"
-                @mouseenter="open='corps'"
-                @mouseleave="open=null"
-            >
-                <button class="hover:text-[#C93635] transition">Корпуса</button>
-
-                <div
-                    x-show="open==='corps'"
-                    x-transition
-                    class="absolute top-full left-0 bg-white shadow-xl border rounded-xl p-6 min-w-[320px] z-50"
+            <li class="relative h-full flex items-center group whitespace-nowrap">
+                <button
+                    class="h-full flex items-center
+                           hover:text-[#C93635]
+                           transition cursor-pointer"
+                    type="button"
                 >
-                    <ul class="space-y-3">
-                        <li><a href="#">Главный корпус</a></li>
-                        <li><a href="#">Ризница ТСЛ</a></li>
-                        <li><a href="#">Конный двор</a></li>
-                        <li><a href="#">Краеведческий корпус</a></li>
+                    Корпуса
+                </button>
+
+                <!-- DROPDOWN -->
+                <div
+                    class="absolute top-full left-0 hidden group-hover:block
+                           bg-white border border-[#DCDEE0]
+                           shadow-xl min-w-[320px]
+                           z-50"
+                >
+                    <ul class="py-4 px-6 space-y-3">
+                        <li><a class="hover:text-[#C93635] block" href="#">Главный корпус</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Ризница ТСЛ</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Конный двор</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Краеведческий корпус</a></li>
                     </ul>
                 </div>
             </li>
 
-            <li><a href="#">Интерактивная карта</a></li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">
+                    Интерактивная карта
+                </a>
+            </li>
 
             <!-- Для групп -->
-            <li class="relative h-full flex items-center"
-                @mouseenter="open='groups'"
-                @mouseleave="open=null"
-            >
-                <button class="hover:text-[#C93635] transition">Для групп</button>
+            <li class="relative h-full flex items-center group whitespace-nowrap">
+                <button
+                    class="h-full flex items-center
+                           hover:text-[#C93635]
+                           transition cursor-pointer"
+                    type="button"
+                >
+                    Для групп
+                </button>
 
                 <div
-                    x-show="open==='groups'"
-                    x-transition
-                    class="absolute top-full left-0 bg-white shadow-xl border rounded-xl p-6 min-w-[300px] z-50"
+                    class="absolute top-full left-0 hidden group-hover:block
+                           bg-white border border-[#DCDEE0]
+                           shadow-xl min-w-[300px]
+                           z-50"
                 >
-                    <ul class="space-y-3">
-                        <li><a href="#">Турфирмам</a></li>
-                        <li><a href="#">Группам учащихся</a></li>
-                        <li><a href="#">Социальным группам</a></li>
-                        <li><a href="#">Людям с инвалидностью</a></li>
-                        <li><a href="#">Паломникам</a></li>
+                    <ul class="py-4 px-6 space-y-3">
+                        <li><a class="hover:text-[#C93635] block" href="#">Турфирмам</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Группам учащихся</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Социальным группам</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Людям с инвалидностью</a></li>
+                        <li><a class="hover:text-[#C93635] block" href="#">Паломникам</a></li>
                     </ul>
                 </div>
             </li>
 
-            <li><a href="#">Посетителям</a></li>
-            <li><a href="#">Мероприятия</a></li>
-            <li><a href="#">Выставки и экспозиции</a></li>
-            <li><a href="#">Экскурсии</a></li>
-            <li><a href="#">О музее</a></li>
-            <li><a href="#">Контакты</a></li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">Посетителям</a>
+            </li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">Мероприятия</a>
+            </li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">Выставки и экспозиции</a>
+            </li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">Экскурсии</a>
+            </li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">О музее</a>
+            </li>
+            <li class="whitespace-nowrap">
+                <a class="hover:text-[#C93635] transition cursor-pointer" href="#">Контакты</a>
+            </li>
 
         </ul>
     </div>
 
-    <!-- MOBILE OVERLAY -->
-    <div
-        x-show="mobileOpen"
-        x-transition
-        class="fixed inset-0 bg-white z-[100] lg:hidden overflow-y-auto"
-    >
-        <div class="px-4 py-4 border-b flex justify-between items-center">
-            <span class="font-semibold">Меню</span>
-            <button @click="mobileOpen=false">✕</button>
-        </div>
-
-        <ul class="divide-y text-lg">
-
-            <li>
-                <button @click="open = open==='corps' ? null : 'corps'"
-                        class="w-full flex justify-between px-4 py-4">
-                    Корпуса <span>⌄</span>
-                </button>
-                <div x-show="open==='corps'" class="px-6 pb-4 space-y-3">
-                    <a href="#">Главный корпус</a>
-                    <a href="#">Ризница</a>
-                    <a href="#">Конный двор</a>
-                    <a href="#">Краеведческий корпус</a>
-                </div>
-            </li>
-
-            <li><a class="block px-4 py-4" href="#">Интерактивная карта</a></li>
-
-            <li>
-                <button @click="open = open==='groups' ? null : 'groups'"
-                        class="w-full flex justify-between px-4 py-4">
-                    Для групп <span>⌄</span>
-                </button>
-                <div x-show="open==='groups'" class="px-6 pb-4 space-y-3">
-                    <a href="#">Турфирмам</a>
-                    <a href="#">Группам учащихся</a>
-                    <a href="#">Социальным группам</a>
-                </div>
-            </li>
-
-            <li><a class="block px-4 py-4" href="#">Посетителям</a></li>
-            <li><a class="block px-4 py-4" href="#">Мероприятия</a></li>
-            <li><a class="block px-4 py-4" href="#">Выставки</a></li>
-            <li><a class="block px-4 py-4" href="#">Экскурсии</a></li>
-            <li><a class="block px-4 py-4" href="#">О музее</a></li>
-            <li><a class="block px-4 py-4" href="#">Контакты</a></li>
-
-        </ul>
-    </div>
 </nav>
