--- a/tpl/header.html
+++ b/tpl/header.html
@@ -143,7 +143,7 @@
                 type="button"
                 aria-label="Меню"
             >
-                <img src="/assets/svg/menu.svg" class="w-6 h-6" alt="">
+                <img src="/assets/img/menu.png" class="w-6 h-6" alt="">
             </button>
 
         </div>
