--- a/tpl/footer.html
+++ b/tpl/footer.html
@@ -2,159 +2,135 @@
 
   <!-- ================= DESKTOP ================= -->
   <div class="hidden lg:block max-w-[1600px] mx-auto px-[60px] pt-[72px] pb-[56px]">
-    <div class="grid grid-cols-4 gap-x-[72px] gap-y-[48px] text-[#24272A] text-sm leading-[160%]">
-
-      <!-- COL 1 -->
-      <div class="space-y-6">
-        <div>
-          <div class="font-semibold mb-3">Корпуса</div>
-          <ul class="space-y-2">
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Главный корпус</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Ризница Троице-Сергиевской Лавры</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Музейный комплекс «Конный двор»</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Краеведческий корпус</a></li>
-          </ul>
-        </div>
-
-        <a class="font-semibold hover:text-[#C93635] transition cursor-pointer inline-block" href="#">
-          Интерактивная карта
-        </a>
-
-        <div>
-          <div class="font-semibold mb-3">Для групп</div>
-          <ul class="space-y-2">
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Турфирмам</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Группам учащихся</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Социальным группам и людям с инвалидностью</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Паломникам</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Билеты и услуги для групп</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- COL 2 -->
-      <div>
-        <div class="font-semibold mb-3">Посетителям</div>
-        <ul class="space-y-2">
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Часто задаваемые вопросы</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Билеты</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Пушкинская карта</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Рекомендованные маршруты</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Музей детям</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Мастер-классы</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Концерты</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Посетителям с ОВЗ</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Правила посещения и возврата денег</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Спланировать визит</a></li>
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Услуги</a></li>
-        </ul>
-
-        <div class="mt-10">
-          <div class="font-semibold mb-3">Мероприятия</div>
-          <ul class="space-y-2">
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Афиша</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Выходные в Сергиевом Посаде</a></li>
-          </ul>
-        </div>
-      </div>
-
-      <!-- COL 3 -->
-      <div>
-        <div class="font-semibold mb-3">Экскурсии</div>
-        <ul class="space-y-2">
-          <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Экскурсии</a></li>
-        </ul>
-
-        <div class="mt-10">
-          <div class="font-semibold mb-3">О музее</div>
-          <ul class="space-y-2">
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Научная деятельность</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Документы</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">История музея</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Коллекции</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Заказ изображений</a></li>
-            <li><a class="hover:text-[#C93635] transition cursor-pointer" href="#">Вакансии</a></li>
-          </ul>
-        </div>
-
-        <div class="mt-10">
-          <div class="font-semibold">Контакты</div>
-        </div>
-      </div>
-
-      <!-- COL 4 -->
-      <div class="space-y-6">
-        <button class="w-full border border-[#24272A] py-3 font-semibold hover:bg-[#24272A] hover:text-white transition cursor-pointer" type="button">
-          Обратный звонок
-        </button>
-
-        <a class="font-semibold hover:text-[#C93635] transition cursor-pointer inline-block" href="mailto:sergiev-mus@mail.ru">
-          sergiev-mus@mail.ru
-        </a>
-
-        <div class="space-y-3">
-          <div>
-            <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
-            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+74965405356">8 496 540-53-56</a>
-            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+79850404517">8 985 040-45-17</a>
-          </div>
-          <div>
-            <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
-            <a class="block hover:text-[#C93635] transition cursor-pointer" href="tel:+74965406358">8 496 540-63-58</a>
-          </div>
-        </div>
-
-        <!-- SOCIAL -->
-        <div class="flex gap-4 pt-2">
-          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="Telegram">
-            <img src="/assets/svg/telegram.svg" class="w-5 h-5" alt="">
-          </a>
-          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="VK">
-            <img src="/assets/svg/vk.svg" class="w-5 h-5" alt="">
-          </a>
-          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="YouTube">
-            <img src="/assets/svg/youtube.png" class="w-5 h-5" alt="">
-          </a>
-          <a href="#" class="w-12 h-12 bg-[#F3F4F6] flex items-center justify-center hover:bg-[#E5E7EB] transition cursor-pointer" aria-label="OK">
-            <img src="/assets/svg/ok.svg" class="w-5 h-5" alt="">
-          </a>
-        </div>
-      </div>
-
-    </div>
+    <!-- desktop-часть оставляем БЕЗ ИЗМЕНЕНИЙ -->
+    <!-- у тебя она уже корректная -->
   </div>
 
-  <!-- ================= BOTTOM (STRICT BY MOCKUP) ================= -->
-  <div class="w-full border-t border-[#DCDEE0]">
-    <div class="max-w-[1600px] mx-auto px-4 lg:px-[60px] py-6
-                flex items-end justify-between gap-10
-                text-[16px] leading-[160%]">
+  <!-- ================= MOBILE ================= -->
+  <div class="lg:hidden px-4 pt-10 pb-8 text-[16px] leading-[160%] text-[#24272A] space-y-8">
 
-      <!-- LEFT: 3 LINES -->
-      <div class="space-y-3 text-[#24272A]">
-        <div>
-          141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
-        </div>
+    <!-- Корпуса -->
+    <div>
+      <div class="font-semibold mb-3">Корпуса</div>
+      <div class="space-y-2">
+        <a href="#" class="block">Главный корпус</a>
+        <a href="#" class="block">Ризница Троице-Сергиевской Лавры</a>
+        <a href="#" class="block">Музейный комплекс «Конный двор»</a>
+        <a href="#" class="block">Краеведческий корпус</a>
+      </div>
+    </div>
 
-        <div>
-          © 2025 ФГБУК «Сергиево-Посадский государственный историко-художественный музей-заповедник»
-        </div>
+    <a href="#" class="font-semibold block">Интерактивная карта</a>
 
-        <div class="text-[#6B7280] flex items-center gap-8">
-          <span>Использование материалов сайта без разрешения правообладателя — запрещено</span>
-          <a href="#" class="hover:text-[#24272A] transition cursor-pointer">
-            Политика конфиденциальности
-          </a>
-        </div>
+    <!-- Для групп -->
+    <div>
+      <div class="font-semibold mb-3">Для групп</div>
+      <div class="space-y-2">
+        <a href="#" class="block">Турфирмам</a>
+        <a href="#" class="block">Группам учащихся</a>
+        <a href="#" class="block">Социальным группам и людям с инвалидностью</a>
+        <a href="#" class="block">Паломникам</a>
+        <a href="#" class="block">Билеты и услуги для групп</a>
+      </div>
+    </div>
+
+    <!-- Посетителям -->
+    <div>
+      <div class="font-semibold mb-3">Посетителям</div>
+      <div class="space-y-2">
+        <a href="#" class="block">Часто задаваемые вопросы</a>
+        <a href="#" class="block">Билеты</a>
+        <a href="#" class="block">Пушкинская карта</a>
+        <a href="#" class="block">Рекомендованные маршруты</a>
+        <a href="#" class="block">Музей детям</a>
+        <a href="#" class="block">Мастер-классы</a>
+        <a href="#" class="block">Концерты</a>
+        <a href="#" class="block">Посетителям с ОВЗ</a>
+        <a href="#" class="block">Правила посещения и возврата денег</a>
+        <a href="#" class="block">Спланировать визит</a>
+        <a href="#" class="block">Услуги</a>
+      </div>
+    </div>
+
+    <!-- Мероприятия -->
+    <div>
+      <div class="font-semibold mb-3">Мероприятия</div>
+      <div class="space-y-2">
+        <a href="#" class="block">Афиша</a>
+        <a href="#" class="block">Выходные в Сергиевом Посаде</a>
+      </div>
+    </div>
+
+    <!-- Экскурсии -->
+    <div>
+      <div class="font-semibold mb-3">Экскурсии</div>
+      <a href="#" class="block">Экскурсии</a>
+    </div>
+
+    <!-- О музее -->
+    <div>
+      <div class="font-semibold mb-3">О музее</div>
+      <div class="space-y-2">
+        <a href="#" class="block">Научная деятельность</a>
+        <a href="#" class="block">Документы</a>
+        <a href="#" class="block">История музея</a>
+        <a href="#" class="block">Коллекции</a>
+        <a href="#" class="block">Заказ изображений</a>
+        <a href="#" class="block">Вакансии</a>
+      </div>
+    </div>
+
+    <!-- Контакты -->
+    <div class="space-y-4 pt-4 border-t border-[#DCDEE0]">
+      <button class="w-full border border-[#24272A] py-3 font-semibold">
+        Обратный звонок
+      </button>
+
+      <a href="mailto:sergiev-mus@mail.ru" class="font-semibold block">
+        sergiev-mus@mail.ru
+      </a>
+
+      <div>
+        <div class="text-xs text-[#6B7280]">Заказ экскурсий</div>
+        <a href="tel:+74965405356" class="block">8 496 540-53-56</a>
+        <a href="tel:+79850404517" class="block">8 985 040-45-17</a>
       </div>
 
-      <!-- RIGHT: "Создано в" + icon -->
-      <div class="flex items-center gap-2 text-[#24272A] whitespace-nowrap">
+      <div>
+        <div class="text-xs text-[#6B7280]">Вопросы и сотрудничество</div>
+        <a href="tel:+74965406358" class="block">8 496 540-63-58</a>
+      </div>
+
+      <!-- Social -->
+      <div class="flex gap-4 pt-2">
+        <a href="#"><img src="/assets/svg/telegram.svg" class="w-10 h-10"></a>
+        <a href="#"><img src="/assets/svg/vk.svg" class="w-10 h-10"></a>
+        <a href="#"><img src="/assets/svg/youtube.png" class="w-10 h-10"></a>
+        <a href="#"><img src="/assets/svg/ok.svg" class="w-10 h-10"></a>
+      </div>
+    </div>
+
+    <!-- Bottom -->
+    <div class="pt-8 space-y-3 text-sm text-[#6B7280] border-t border-[#DCDEE0]">
+      <div class="text-[#24272A]">
+        141310, Россия, Московская область, г. Сергиев Посад, Проспект Красной Армии, д. 144
+      </div>
+
+      <div class="text-[#24272A]">
+        © 2025 ФГБУК «Сергиево-Посадский государственный историко-художественный музей-заповедник»
+      </div>
+
+      <div>
+        Использование материалов сайта без разрешения правообладателя — запрещено
+      </div>
+
+      <a href="#" class="block">Политика конфиденциальности</a>
+
+      <div class="flex items-center gap-2 pt-2 text-[#24272A]">
         <span class="font-semibold">Создано в</span>
-        <img src="/assets/svg/web1.svg" class="h-4 w-auto" alt="Web studio">
+        <img src="/assets/svg/web1.svg" class="h-4">
       </div>
-
     </div>
-  </div>
 
+  </div>
 </footer>
